--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
-    
-
+<!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<!-- css styles link -->
     <link rel="stylesheet" href="styles/portfolio.css" class="css">
 </head>
 
 <body>
     <header>
+        <nav>
+            <h2 class="nav-title">Mus<span class="text-part">ta</span>kim</h2>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="primary-button">Hire Me</button></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
