--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title">Mus<span class="text-part">ta</span>kim</h2>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button class="primary-button">Hire Me</button></li>
+                <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi,I am</h3>
+                <h2 class="banner-title">MD MUSTAKIM BILLAH</h2>
+                <P>An enthusiastic web developer in training, diving into the world of coding to bring innovative, user-friendly websites to life. Excited to learn, grow, and create something amazing for the web!</P>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact Me</button>
+            </div>
+            <img class="banner-image" src="images/Mustakim.png" alt="mustakim's photo">
+        </div>
 
     </header>
     <main>
