added about and know section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
-
+<!-- banner -->
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi,I am</h3>
@@ -32,12 +32,71 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact Me</button>
             </div>
-            <img class="banner-image" src="images/Mustakim.png" alt="mustakim's photo">
+            <img class="banner-profile" src="images/Mustakim.png" alt="mustakim's photo">
         </div>
 
     </header>
-    <main>
+    <main class="main-content">
+            <!-- about section -->
+             <div class="about">
+                <h2>About ME</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusantium natus a eos accusamus illo laboriosam ipsam, assumenda odit repellendus quaerat praesentium exercitationem esse vero recusandae quas ipsa dolorem molestiae!</p>
+                <ul class="info">
+                    <li>
+                        <P>Name:</P>
+                        <h4>MD MUSTAKIM BILLAH</h4>
+                    </li>
+                    <li>
+                        <p>Email:</p>
+                        <h4>mustakim1@gmail.com</h4>
+                    </li>
+                    <li>
+                        <p>Date of Birth:</p>
+                        <h4>19th December 2001</h4>
+                    </li>
+                    <li>
+                        <p>From:</p>
+                        <h4>People's Republic of Bangladesh</h4>
+                    </li>
+                </ul>
+             </div>
 
+            <!-- what i do n know section -->
+                <div class="do-N-know">
+                    <div class="dus-text">
+                        <h2>What I Know</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eum reiciendis sed sapiente officiis sint suscipit similique corrupti aliquid repellat!</p>
+                    </div>
+
+                    <div class="cards">
+
+                        <div class="vanilajs shado">
+                            <img src="/images/vanilajs.png" alt="">
+                            <h4>Vanila Javascript</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
+
+                        </div>
+                        <div class="react shado">
+                            <img src="/images/reactjs.png" alt="react icon">
+                            <h4>React js</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
+                        </div>
+                        <div class="nodejs shado">
+                            <img src="/images/nodejs.png" alt="nodejs icon">
+                            <h4>Nodejs</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
+                        </div>
+                        <div class="mongodb shado">
+                            <img src="/images/mongodb.png" alt="mongodb icon">
+                            <h4>MongoDB</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
+                        </div>
+
+                    </div>
+                </div>
+            <!-- summery of resume -->
+
+            <!-- download cv button -->
     </main>
     <footer>
 
