write alt in vanila js card

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="cards">
 
                         <div class="vanilajs shado">
-                            <img src="/images/vanilajs.png" alt="">
+                            <img src="/images/vanilajs.png" alt="vanilajs icon">
                             <h4>Vanila Javascript</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
 
