solve image show problem and added fontawesome  icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <!-- css styles link -->
     <link rel="stylesheet" href="styles/portfolio.css" class="css">
+<!-- fontawesome -->
+
+<script src="https://kit.fontawesome.com/6500a0c576.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,8 +32,12 @@
                 <h3 class="banner-greeting">Hi,I am</h3>
                 <h2 class="banner-title">MD MUSTAKIM BILLAH</h2>
                 <P>An enthusiastic web developer in training, diving into the world of coding to bring innovative, user-friendly websites to life. Excited to learn, grow, and create something amazing for the web!</P>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact Me</button>
+                <button class="btn-primary">
+                    <i class="fa-solid fa-download"></i>
+                    Download CV
+                </button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact Me
+                </button>
             </div>
             <img class="banner-profile" src="images/Mustakim.png" alt="mustakim's photo">
         </div>
@@ -71,23 +78,23 @@
                     <div class="cards">
 
                         <div class="vanilajs shado">
-                            <img src="/images/vanilajs.png" alt="vanilajs icon">
+                            <img src="images/vanilajs.png" alt="vanilajs icon">
                             <h4>Vanila Javascript</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
 
                         </div>
                         <div class="react shado">
-                            <img src="/images/reactjs.png" alt="react icon">
+                            <img src="images/reactjs.png" alt="react icon">
                             <h4>React js</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
                         </div>
                         <div class="nodejs shado">
-                            <img src="/images/nodejs.png" alt="nodejs icon">
+                            <img src="images/nodejs.png" alt="nodejs icon">
                             <h4>Nodejs</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
                         </div>
                         <div class="mongodb shado">
-                            <img src="/images/mongodb.png" alt="mongodb icon">
+                            <img src="images/mongodb.png" alt="mongodb icon">
                             <h4>MongoDB</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam neque culpa, cum alias nihil!</p>
                         </div>
@@ -138,7 +145,7 @@
 
             <!-- download cv button -->
             <div class="btn-position">
-                <button class="btn-primary ">Download CV</button>
+                <button class="btn-primary "><i class="fa-solid fa-download"></i>Download CV</button>
             </div>
     </main>
     <footer>
