--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
             </div>
     </main>
     <footer>
-
+        <div class="connect">
+            <h2>Let's connect</h2>
+        </div>
     </footer>
 </body>
 
