updated front page v-1

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- what i do n know section -->
                 <div class="do-N-know">
                     <div class="dus-text">
-                        <h2>What I Know</h2>
+                        <h2>What I'll Learn</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eum reiciendis sed sapiente officiis sint suscipit similique corrupti aliquid repellat!</p>
                     </div>
 
@@ -149,8 +149,39 @@
             </div>
     </main>
     <footer>
-        <div class="connect">
-            <h2>Let's connect</h2>
+        <div class="footer-container">
+            <!-- social connect section -->
+            <div class="left-footer">
+
+                <div class="connect">
+                    <h1>Let's connect</h1>
+                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, nemo!Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, nemo!
+                    </p>
+                </div>
+                <div class="social-icons">
+                    <a href=""><i class="fa-brands fa-linkedin"></i> </a>
+                    <a href=""><i class="fa-brands fa-x-twitter"></i> </a>
+                    <a href=""><i class="fa-brands fa-instagram"></i> </a>
+                    <a href=""><i class="fa-brands fa-facebook"></i> </a>
+                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </div>
+
+            </div>
+
+            <!-- message section -->
+            <div class="right-footer">
+                <h1>Let's message me here.</h1>
+                <label class="form-text" for="name">Your Name:</label><br>
+                <input type="text" name="" placeholder="your name" id="name"><br>
+
+                <label class="form-text" for="email">Your Email:</label><br>
+                <input type="email" placeholder="provide email" name="" id="email"><br>
+
+                <label class="form-text" for="message">Write message:</label><br>
+                <textarea  name="" placeholder="write message here.." id="message" cols="60" rows="10"></textarea><br>
+
+                <input class="btn-primary" type="submit" value="Submit">
+            </div>
         </div>
     </footer>
 </body>
